--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Lawrence S. Grant-Lapre</title>
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <!-- CSS only -->
+
+<link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <div class="top-container">
       <img class="top-cloud" src="img/cloud.png" alt="">
 <h1>I'm Lawrie.</h1>
 <h2>a math teacher.</h2>
-<img class="bottom-cloud" src="img/cloud.png" alt=""><img src="img/mountain.png" alt="">
   </div>
 <div class="middle-container">
   <div class="profile">
@@ -40,13 +41,12 @@
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3>If you love learning and achieving your goals as much as I do.</h3>
-    <p class="contactMsg">Love learning as much as I do? Let's talk about how awesome you can be while we learn maths together!</p>
+    <p class="contactMsg">Love learning as much as I do? Let's talk about how awesome you can be while we learn maths together! Limited slots available per week.</p>
     <a class="btn" href="mailto:lawrence@grantlapre.com.my">CONTACT ME</a>
   </div>
 </div>
 <div class="bottom-container">  <a class="footer-link" href="https://www.linkedin.com/lawrence-grant-lapre-cams-cgss-mba-mfraudfincrime-mhrm-929325107/">LinkedIn</a>
   <a class="footer-link" href="https://twitter.com/lawr4life">Twitter</a>
-  <a class="footer-link" href="https://www.grantlapre.com.my/">Website</a>
   <p class="footCR">© LSGrant-Lapre.</p></div>
   </body>
 </html>
