--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <h2>Get In Touch</h2>
     <h3>If you love learning and achieving your goals as much as I do.</h3>
     <p class="contactMsg">Love learning as much as I do? Let's talk about how awesome you can be while we learn maths together! Limited slots available per week.</p>
-    <a class="btn" href="mailto:lawrence@grantlapre.com.my">CONTACT ME</a>
+    <a class="btn" href="mailto:lawr4life@gmail.com">CONTACT ME</a>
   </div>
 </div>
 <div class="bottom-container">  <a class="footer-link" href="https://www.linkedin.com/lawrence-grant-lapre-cams-cgss-mba-mfraudfincrime-mhrm-929325107/">LinkedIn</a>
