--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
   <!-- CSS only -->
 
 <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    
     <div class="top-container">
       <img class="top-cloud" src="img/cloud.png" alt="">
 <h1>I'm Lawrie.</h1>
@@ -37,7 +41,33 @@
       <p>I have a love of learning, so I also enjoy flying, singing, computer programming, financial compliance, taekwondo and visiting coffee shops around the world.</p>
     </div>
   </div>
+    <hr>
+  <section id="testimonials">
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          Fantastic Math teacher! Mr Lawrie’s classes are always fun and engaging.<em>Farangis M. Y. Ghazanfar, France</em>
+        </div>
+        <div class="carousel-item">
+        waiting for next testimonial - thank you in advance
+        </div>
+        <div class="carousel-item">
+        waiting for next testimonial - thank you in advance
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
   <hr>
+  
   <div class="contact-me">
     <h2>Get In Touch</h2>
     <h3>If you love learning and achieving your goals as much as I do.</h3>
