adjust page tag in testimonial

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          Fantastic Math teacher! Mr Lawrie’s classes are always fun and engaging.<br /><em>Farangis M. Y. Ghazanfar, France</em>
+          <p>Fantastic Math teacher! Mr Lawrie’s classes are always fun and engaging.<br /><em>Farangis M. Y. Ghazanfar, France</em></p>
         </div>
         <div class="carousel-item">
         waiting for next testimonial - thank you in advance
